--- a/html-css/module-5/index.html
+++ b/html-css/module-5/index.html
@@ -33,46 +33,23 @@
                 <img src="./img/slider/angle-right.svg" alt="angle-left" width="105px" height="105px">
             </button>
             <ul class="slides">
-                <li></li>
+                <li>
+                    <div class="black-fon"></div>
+                    <h3>affordable paris tours</h3>
+                    <p>city tours/tour tickets/tour guides</p>
+                    <img src="./img/slider/fon-image.jpg" alt="fon image" width="1600px" height="600px">
+                </li>
             </ul>
         </div>
-        <section class="container">
-            <h2>new collection</h2>
-            <ul class="clearfix">
-                <li class="product-cart">
-                    <a href="#">
-                        <div class="img-active">
-                            <div class="buy-area"></div>
-                            <div class="icon-area">
-                                <button class="icon">
-                                        <img src="./img/icon/like.svg" alt="like" width="37px" height="37px">
-                                </button>
-                                <button class="icon two">
-                                    <img src="./img/icon/shuffle.svg" alt="shuffle" width="37px" height="37px">
-                                </button>
-                                <button class="icon three">
-                                        <img src="./img/icon/clock.svg" alt="clock" width="37px" height="37px">
-                                </button>
-                                <button class="cart clearfix">
-                                        <div class="cart-image">
-                                            <img src="./img/icon/cart.svg" alt="cart" width="37px" height="37px">
-                                        </div>
-                                        <span> add to card </span>
-                                </button>  
-                            </div>
-                            <img src="./img/catalog/product1.jpg" alt="Men in blue tshirt" width="255px" height="282px">
-                        </div>
-                        <div class="clearfix">
-                            <p>blue tshirt</p>
-                            <p>26</p>
-                        </div>
-                    </a>
-                </li>
-                <li class="product-cart">
-                    <a href="#">
-                        <div class="img-active">
-                            <div class="buy-area"></div>
-                            <div class="icon-area">
+        <section>
+            <div class="container">
+                <h2>new collection</h2>
+                <ul class="clearfix">
+                    <li class="product-cart">
+                        <a href="#">
+                            <div class="img-active">
+                                <div class="buy-area"></div>
+                                <div class="icon-area">
                                     <button class="icon">
                                             <img src="./img/icon/like.svg" alt="like" width="37px" height="37px">
                                     </button>
@@ -88,74 +65,104 @@
                                             </div>
                                             <span> add to card </span>
                                     </button>  
+                                </div>
+                                <img src="./img/catalog/product1.jpg" alt="Men in blue tshirt" width="255px" height="282px">
                             </div>
-                            <img src="./img/catalog/product2.jpg" alt="woman in shirt" width="255px" height="282px">
-                        </div>
-                        <div class="clearfix">
-                            <p>woman shirt</p>
-                            <p>31</p>
-                        </div>
-                    </a>
-                </li>
-                <li class="product-cart">
-                    <a href="#">
-                        <div class="img-active">
-                            <div class="buy-area"></div>
-                            <div class="icon-area">
-                                    <button class="icon">
-                                            <img src="./img/icon/like.svg" alt="like" width="37px" height="37px">
-                                    </button>
-                                    <button class="icon two">
-                                        <img src="./img/icon/shuffle.svg" alt="shuffle" width="37px" height="37px">
-                                    </button>
-                                    <button class="icon three">
-                                            <img src="./img/icon/clock.svg" alt="clock" width="37px" height="37px">
-                                    </button>
-                                    <button class="cart clearfix">
-                                            <div class="cart-image">
-                                                <img src="./img/icon/cart.svg" alt="cart" width="37px" height="37px">
-                                            </div>
-                                            <span> add to card </span>
-                                    </button>  
+                            <div class="clearfix">
+                                <p>blue tshirt</p>
+                                <p>26</p>
                             </div>
-                            <img src="./img/catalog/product3.jpg" alt="men in lellow tshirt" width="255px" height="282px">
-                        </div>
-                        <div class="clearfix">
-                            <p>yellow tshirt</p>
-                            <p>21</p>
-                        </div>
-                    </a>
-                </li>
-                <li class="product-cart">
-                    <a href="#">
-                        <div class="img-active">
-                            <div class="buy-area"></div>
-                            <div class="icon-area">
-                                    <button class="icon">
-                                            <img src="./img/icon/like.svg" alt="like" width="37px" height="37px">
-                                    </button>
-                                    <button class="icon two">
-                                        <img src="./img/icon/shuffle.svg" alt="shuffle" width="37px" height="37px">
-                                    </button>
-                                    <button class="icon three">
-                                            <img src="./img/icon/clock.svg" alt="clock" width="37px" height="37px">
-                                    </button>
-                                    <button class="cart clearfix">
-                                            <div class="cart-image">
-                                                <img src="./img/icon/cart.svg" alt="cart" width="37px" height="37px">
-                                            </div>
-                                            <span> add to card </span>
-                                    </button>  
+                        </a>
+                    </li>
+                    <li class="product-cart">
+                        <a href="#">
+                            <div class="img-active">
+                                <div class="buy-area"></div>
+                                <div class="icon-area">
+                                        <button class="icon">
+                                                <img src="./img/icon/like.svg" alt="like" width="37px" height="37px">
+                                        </button>
+                                        <button class="icon two">
+                                            <img src="./img/icon/shuffle.svg" alt="shuffle" width="37px" height="37px">
+                                        </button>
+                                        <button class="icon three">
+                                                <img src="./img/icon/clock.svg" alt="clock" width="37px" height="37px">
+                                        </button>
+                                        <button class="cart clearfix">
+                                                <div class="cart-image">
+                                                    <img src="./img/icon/cart.svg" alt="cart" width="37px" height="37px">
+                                                </div>
+                                                <span> add to card </span>
+                                        </button>  
+                                </div>
+                                <img src="./img/catalog/product2.jpg" alt="woman in shirt" width="255px" height="282px">
                             </div>
-                            <img src="./img/catalog/product4.jpg" alt="cool lingerie" width="255px" height="282px">
-                        </div>
-                        <div class="clearfix">
-                            <p>cool lingerie</p>
-                            <p>56</p>
-                        </div>
-                    </a>
-                </li>
-            </ul>    
+                            <div class="clearfix">
+                                <p>woman shirt</p>
+                                <p>31</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="product-cart">
+                        <a href="#">
+                            <div class="img-active">
+                                <div class="buy-area"></div>
+                                <div class="icon-area">
+                                        <button class="icon">
+                                                <img src="./img/icon/like.svg" alt="like" width="37px" height="37px">
+                                        </button>
+                                        <button class="icon two">
+                                            <img src="./img/icon/shuffle.svg" alt="shuffle" width="37px" height="37px">
+                                        </button>
+                                        <button class="icon three">
+                                                <img src="./img/icon/clock.svg" alt="clock" width="37px" height="37px">
+                                        </button>
+                                        <button class="cart clearfix">
+                                                <div class="cart-image">
+                                                    <img src="./img/icon/cart.svg" alt="cart" width="37px" height="37px">
+                                                </div>
+                                                <span> add to card </span>
+                                        </button>  
+                                </div>
+                                <img src="./img/catalog/product3.jpg" alt="men in lellow tshirt" width="255px" height="282px">
+                            </div>
+                            <div class="clearfix">
+                                <p>yellow tshirt</p>
+                                <p>21</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="product-cart">
+                        <a href="#">
+                            <div class="img-active">
+                                <div class="buy-area"></div>
+                                <div class="icon-area">
+                                        <button class="icon">
+                                                <img src="./img/icon/like.svg" alt="like" width="37px" height="37px">
+                                        </button>
+                                        <button class="icon two">
+                                            <img src="./img/icon/shuffle.svg" alt="shuffle" width="37px" height="37px">
+                                        </button>
+                                        <button class="icon three">
+                                                <img src="./img/icon/clock.svg" alt="clock" width="37px" height="37px">
+                                        </button>
+                                        <button class="cart clearfix">
+                                                <div class="cart-image">
+                                                    <img src="./img/icon/cart.svg" alt="cart" width="37px" height="37px">
+                                                </div>
+                                                <span> add to card </span>
+                                        </button>  
+                                </div>
+                                <img src="./img/catalog/product4.jpg" alt="cool lingerie" width="255px" height="282px">
+                            </div>
+                            <div class="clearfix">
+                                <p>cool lingerie</p>
+                                <p>56</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>    
         </section>
     </main>
     <footer>
