--- a/html-css/module-5/index.html
+++ b/html-css/module-5/index.html
@@ -26,18 +26,14 @@
     </header>
     <main>
         <div class="slider">
-            <button class="slider-ctrl prev">
-                <img src="./img/slider/angle-left.svg" alt="angle-left" width="105px" height="105px">
-            </button>
-            <button class="slider-ctrl next">
-                <img src="./img/slider/angle-right.svg" alt="angle-left" width="105px" height="105px">
-            </button>
+            <button class="slider-ctrl prev"></button>
+            <button class="slider-ctrl next"></button>
             <ul class="slides">
                 <li>
                     <div class="black-fon"></div>
                     <h3>affordable paris tours</h3>
                     <p>city tours/tour tickets/tour guides</p>
-                    <img src="./img/slider/fon-image.jpg" alt="fon image" width="1600px" height="600px">
+                    <img src="./img/slider/fon-image.jpg" alt="fon image" width="1600" height="600">
                 </li>
             </ul>
         </div>
@@ -48,25 +44,17 @@
                     <li class="product-cart">
                         <a href="#">
                             <div class="img-active">
-                                <div class="buy-area"></div>
+                                <div class="fon-area"></div>
                                 <div class="icon-area">
-                                    <button class="icon">
-                                            <img src="./img/icon/like.svg" alt="like" width="37px" height="37px">
-                                    </button>
-                                    <button class="icon two">
-                                        <img src="./img/icon/shuffle.svg" alt="shuffle" width="37px" height="37px">
-                                    </button>
-                                    <button class="icon three">
-                                            <img src="./img/icon/clock.svg" alt="clock" width="37px" height="37px">
-                                    </button>
+                                    <button class="icon like"></button>
+                                    <button class="icon shuffle"></button>
+                                    <button class="icon clock"></button>
                                     <button class="cart clearfix">
-                                            <div class="cart-image">
-                                                <img src="./img/icon/cart.svg" alt="cart" width="37px" height="37px">
-                                            </div>
+                                            <div class="cart-image"></div>
                                             <span> add to card </span>
                                     </button>  
                                 </div>
-                                <img src="./img/catalog/product1.jpg" alt="Men in blue tshirt" width="255px" height="282px">
+                                <img src="./img/catalog/product1.jpg" alt="Men in blue tshirt" width="255" height="282">
                             </div>
                             <div class="clearfix">
                                 <p>blue tshirt</p>
@@ -77,25 +65,17 @@
                     <li class="product-cart">
                         <a href="#">
                             <div class="img-active">
-                                <div class="buy-area"></div>
+                                <div class="fon-area"></div>
                                 <div class="icon-area">
-                                        <button class="icon">
-                                                <img src="./img/icon/like.svg" alt="like" width="37px" height="37px">
-                                        </button>
-                                        <button class="icon two">
-                                            <img src="./img/icon/shuffle.svg" alt="shuffle" width="37px" height="37px">
-                                        </button>
-                                        <button class="icon three">
-                                                <img src="./img/icon/clock.svg" alt="clock" width="37px" height="37px">
-                                        </button>
+                                        <button class="icon like"></button>
+                                        <button class="icon shuffle"></button>
+                                        <button class="icon clock"></button>
                                         <button class="cart clearfix">
-                                                <div class="cart-image">
-                                                    <img src="./img/icon/cart.svg" alt="cart" width="37px" height="37px">
-                                                </div>
+                                                <div class="cart-image"></div>
                                                 <span> add to card </span>
                                         </button>  
                                 </div>
-                                <img src="./img/catalog/product2.jpg" alt="woman in shirt" width="255px" height="282px">
+                                <img src="./img/catalog/product2.jpg" alt="woman in shirt" width="255" height="282">
                             </div>
                             <div class="clearfix">
                                 <p>woman shirt</p>
@@ -106,25 +86,17 @@
                     <li class="product-cart">
                         <a href="#">
                             <div class="img-active">
-                                <div class="buy-area"></div>
+                                <div class="fon-area"></div>
                                 <div class="icon-area">
-                                        <button class="icon">
-                                                <img src="./img/icon/like.svg" alt="like" width="37px" height="37px">
-                                        </button>
-                                        <button class="icon two">
-                                            <img src="./img/icon/shuffle.svg" alt="shuffle" width="37px" height="37px">
-                                        </button>
-                                        <button class="icon three">
-                                                <img src="./img/icon/clock.svg" alt="clock" width="37px" height="37px">
-                                        </button>
+                                        <button class="icon like"></button>
+                                        <button class="icon shuffle"></button>
+                                        <button class="icon clock"></button>
                                         <button class="cart clearfix">
-                                                <div class="cart-image">
-                                                    <img src="./img/icon/cart.svg" alt="cart" width="37px" height="37px">
-                                                </div>
+                                                <div class="cart-image"></div>
                                                 <span> add to card </span>
                                         </button>  
                                 </div>
-                                <img src="./img/catalog/product3.jpg" alt="men in lellow tshirt" width="255px" height="282px">
+                                <img src="./img/catalog/product3.jpg" alt="men in lellow tshirt" width="255" height="282">
                             </div>
                             <div class="clearfix">
                                 <p>yellow tshirt</p>
@@ -135,25 +107,17 @@
                     <li class="product-cart">
                         <a href="#">
                             <div class="img-active">
-                                <div class="buy-area"></div>
+                                <div class="fon-area"></div>
                                 <div class="icon-area">
-                                        <button class="icon">
-                                                <img src="./img/icon/like.svg" alt="like" width="37px" height="37px">
-                                        </button>
-                                        <button class="icon two">
-                                            <img src="./img/icon/shuffle.svg" alt="shuffle" width="37px" height="37px">
-                                        </button>
-                                        <button class="icon three">
-                                                <img src="./img/icon/clock.svg" alt="clock" width="37px" height="37px">
-                                        </button>
+                                        <button class="icon like"></button>
+                                        <button class="icon shuffle"></button>
+                                        <button class="icon clock"></button>
                                         <button class="cart clearfix">
-                                                <div class="cart-image">
-                                                    <img src="./img/icon/cart.svg" alt="cart" width="37px" height="37px">
-                                                </div>
+                                                <div class="cart-image"></div>
                                                 <span> add to card </span>
                                         </button>  
                                 </div>
-                                <img src="./img/catalog/product4.jpg" alt="cool lingerie" width="255px" height="282px">
+                                <img src="./img/catalog/product4.jpg" alt="cool lingerie" width="255" height="282">
                             </div>
                             <div class="clearfix">
                                 <p>cool lingerie</p>
