Fixed cart button

--- a/html-css/module-5/index.html
+++ b/html-css/module-5/index.html
@@ -49,10 +49,7 @@
                                     <button class="icon like"></button>
                                     <button class="icon shuffle"></button>
                                     <button class="icon clock"></button>
-                                    <button class="cart clearfix">
-                                            <div class="cart-image"></div>
-                                            <span> add to card </span>
-                                    </button>  
+                                    <button class="cart clearfix">add to card</button>  
                                 </div>
                                 <img src="./img/catalog/product1.jpg" alt="Men in blue tshirt" width="255" height="282">
                             </div>
@@ -70,10 +67,7 @@
                                         <button class="icon like"></button>
                                         <button class="icon shuffle"></button>
                                         <button class="icon clock"></button>
-                                        <button class="cart clearfix">
-                                                <div class="cart-image"></div>
-                                                <span> add to card </span>
-                                        </button>  
+                                        <button class="cart clearfix">add to card</button>  
                                 </div>
                                 <img src="./img/catalog/product2.jpg" alt="woman in shirt" width="255" height="282">
                             </div>
@@ -91,10 +85,7 @@
                                         <button class="icon like"></button>
                                         <button class="icon shuffle"></button>
                                         <button class="icon clock"></button>
-                                        <button class="cart clearfix">
-                                                <div class="cart-image"></div>
-                                                <span> add to card </span>
-                                        </button>  
+                                        <button class="cart clearfix">add to card</button>  
                                 </div>
                                 <img src="./img/catalog/product3.jpg" alt="men in lellow tshirt" width="255" height="282">
                             </div>
@@ -112,10 +103,7 @@
                                         <button class="icon like"></button>
                                         <button class="icon shuffle"></button>
                                         <button class="icon clock"></button>
-                                        <button class="cart clearfix">
-                                                <div class="cart-image"></div>
-                                                <span> add to card </span>
-                                        </button>  
+                                        <button class="cart clearfix">add to card</button>  
                                 </div>
                                 <img src="./img/catalog/product4.jpg" alt="cool lingerie" width="255" height="282">
                             </div>
