Made services section

--- a/html-css/module-6/index.html
+++ b/html-css/module-6/index.html
@@ -22,7 +22,42 @@
             </ul>
         </nav>
     </header>
-    <main></main>
+    <main class="container">
+        <section>
+            <p class="first-section-p">We work with</p>
+            <h2>Amazing services</h2>
+            <ul class="services">
+                <li>
+                    <h3>photography</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </li>
+                <li>
+                    <h3>web design</h3>
+                    <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </li>
+                <li>
+                    <h3>creativity</h3>
+                    <p>Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </li>
+                <li>
+                    <h3>seo</h3>
+                    <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+                </li>
+                <li>
+                    <h3>css/html</h3>
+                    <p>Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
+                </li>
+                <li>
+                    <h3>digital</h3>
+                    <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+                <p class="first-section-p">Who we are</p>
+                <h2>Meet our team</h2>
+        </section>
+    </main>
     <footer></footer>
     
 </body>
