Made Portfolio section

--- a/html-css/module-6/index.html
+++ b/html-css/module-6/index.html
@@ -56,6 +56,42 @@
         <section>
                 <p class="first-section-p">Who we are</p>
                 <h2>Meet our team</h2>
+                <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                <ul class="portfolio">
+                    <li>
+                        <figure>
+                            <a href="#">
+                                <img src="./img/portfolio/dix.jpg" alt="Matthew Dix" width="380px" height="470px">
+                            </a>
+                            <figcaption>
+                                <p class="name"><a href="#">Matthew Dix</a></p>
+                                <p class="profession"><a href="#">Graphic Design</a></p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <a href="#">
+                                <img src="./img/portfolio/campbell.jpg" alt="Christopher Campbell" width="380px" height="470px">
+                            </a>
+                            <figcaption>
+                                <p class="name"><a href="#">Christopher Campbell</a></p>
+                                <p class="profession"><a href="#">Branding/UX design</a></p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <a href="#">
+                                <img src="./img/portfolio/dix.jpg" alt="Michael Fertig" width="380px" height="470px">
+                            </a>
+                            <figcaption>
+                                <p class="name"><a href="#">Michael Fertig</a></p>
+                                <p class="profession"><a href="#">Developer</a></p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
         </section>
     </main>
     <footer></footer>
