--- a/html-css/module-6/index.html
+++ b/html-css/module-6/index.html
@@ -83,7 +83,7 @@
                     <li>
                         <figure>
                             <a href="#">
-                                <img src="./img/portfolio/dix.jpg" alt="Michael Fertig" width="380px" height="470px">
+                                <img src="./img/portfolio/fertig.jpg" alt="Michael Fertig" width="380px" height="470px">
                             </a>
                             <figcaption>
                                 <p class="name"><a href="#">Michael Fertig</a></p>
@@ -94,7 +94,16 @@
                 </ul>
         </section>
     </main>
-    <footer></footer>
+    <footer class="container">
+        <div>
+            <span>&#169; 2016 MoGo free PSD template by</span>
+            <address>Laaqiq</address>
+        </div>
+        <form action="#">
+            <input type="text" placeholder="Your Email...">
+            <input type="submit" value="subscribe">
+        </form>
+    </footer>
     
 </body>
 </html>
