Made social icons

--- a/html-css/module-6/index.html
+++ b/html-css/module-6/index.html
@@ -58,9 +58,15 @@
                 <h2>Meet our team</h2>
                 <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                 <ul class="portfolio">
-                    <li>
+                    <li class="cart">
                         <figure>
                             <a href="#">
+                                <ul class="social-icons">
+                                    <li class="social-icon"></li>
+                                    <li class="social-icon"></li>
+                                    <li class="social-icon"></li>
+                                    <li class="social-icon"></li>
+                                </ul>
                                 <img src="./img/portfolio/dix.jpg" alt="Matthew Dix" width="380px" height="470px">
                             </a>
                             <figcaption>
@@ -69,9 +75,15 @@
                             </figcaption>
                         </figure>
                     </li>
-                    <li>
+                    <li class="cart">
                         <figure>
                             <a href="#">
+                                <ul class="social-icons">
+                                        <li class="social-icon"></li>
+                                        <li class="social-icon"></li>
+                                        <li class="social-icon"></li>
+                                        <li class="social-icon"></li>
+                                </ul>
                                 <img src="./img/portfolio/campbell.jpg" alt="Christopher Campbell" width="380px" height="470px">
                             </a>
                             <figcaption>
@@ -80,9 +92,15 @@
                             </figcaption>
                         </figure>
                     </li>
-                    <li>
+                    <li class="cart">
                         <figure>
                             <a href="#">
+                                <ul class="social-icons">
+                                        <li class="social-icon"></li>
+                                        <li class="social-icon"></li>
+                                        <li class="social-icon"></li>
+                                        <li class="social-icon"></li>
+                                </ul>
                                 <img src="./img/portfolio/fertig.jpg" alt="Michael Fertig" width="380px" height="470px">
                             </a>
                             <figcaption>
@@ -95,12 +113,12 @@
         </section>
     </main>
     <footer class="container">
-        <div>
+        <div class="copyright">
             <span>&#169; 2016 MoGo free PSD template by</span>
             <address>Laaqiq</address>
         </div>
         <form action="#">
-            <input type="text" placeholder="Your Email...">
+            <input type="text" placeholder="   Your Email...">
             <input type="submit" value="subscribe">
         </form>
     </footer>
